--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,13 +21,13 @@
           </div> -->
 
         <!-- Login Form -->
-        <form>
+        <form action="/login" method="POST">
           <input
             type="text"
-            id="login"
+            id="email"
             class="fadeIn second"
-            name="login"
-            placeholder="user name"
+            name="email"
+            placeholder="email"
           />
           <input
             type="text"
