--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -76,7 +76,7 @@
       <li class="rightItems">Home</li>
     </ul>
     <div class="signup">
-      <form name="form1" action="">
+      <form name="form1" action="/signup" method="POST">
         <h1>Sign Up</h1>
         <p>It's Free and only takes a minute.</p>
         <label>First Name:</label>
