--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,8 @@
   <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet"
+    type="text/css">
 
   <!-- Custom styles for this template -->
   <link href="css/landing-page.min.css" rel="stylesheet">
@@ -29,7 +30,8 @@
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
       <a class="navbar-brand" href="#">Ideal Assignments Help</a>
-      <a class="btn btn-primary" href="/login">Sign In</a>
+      <a class="btn btn-primary" href="/auth">Sign In or Create account </a>
+      <!-- <a class="btn btn-primary" href="logsign.html">Create Account </a> -->
     </div>
   </nav>
 
@@ -42,16 +44,17 @@
           <h1 class="mb-5">Get solutions to all your assignments, articles, and essay here. </h1>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <form>
+          <!-- <form>
             <div class="form-row">
               <div class="col-12 col-md-9 mb-2 mb-md-0">
                 <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
               </div>
               <div class="col-12 col-md-3">
-               <a href="/signup"> <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button></a>
+                <button type="submit" class="btn btn-block btn-lg btn-dark"> <a href="logsign.html"  style="text-decoration: none;"> Sign up!  </a></button>
+             
               </div>
             </div>
-          </form>
+          </form> -->
         </div>
       </div>
     </div>
@@ -85,13 +88,19 @@
               <i class="icon-check m-auto text-primary"></i>
             </div>
             <h3>100% Accuracy </h3>
-            <p class="lead mb-0">Our experts are ready to you the best.</p>
+            <p class="lead mb-0">Our experts are ready to give you the best.</p>
           </div>
         </div>
       </div>
     </div>
   </section>
 
+  <!-- Order now -->
+  <span id="chat_ON">
+    <i class="fa fa-comments-o" aria-hidden="true"></i>
+    <a href="/assignment/submit" style="text-decoration: none;"> Submit now </a>
+
+  </span>
   <!-- Image Showcases -->
   <section class="showcase">
     <div class="container-fluid p-0">
@@ -100,21 +109,24 @@
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('./img/g.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>General Assigments</h2>
-          <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+          <p class="lead mb-0">Do you have Chemistry, Biology or any other subjects assignments you want us to solve for
+            you. You are in your final search</p>
         </div>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6 text-white showcase-img" style="background-image: url('./img/s.jpg');"></div>
         <div class="col-lg-6 my-auto showcase-text">
           <h2>Statistical Assignments</h2>
-          <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
+          <p class="lead mb-0">Our Statisticians are ready to give you perfect solutions to all your Statistical
+            Assignments. Try us today. </p>
         </div>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/b1.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Business plan</h2>
-          <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
+          <p class="lead mb-0">We can help you to come up with award-winning Business Plan even beyond your imagination.
+            That is what we do. </p>
         </div>
       </div>
     </div>
@@ -122,38 +134,44 @@
       <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/e.jpg');"></div>
       <div class="col-lg-6 my-auto showcase-text">
         <h2>Essay Writing</h2>
-        <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
+        <p class="lead mb-0">Writing correct and perfect essay is our job. Let's help you handle it.</p>
       </div>
   </section>
 
-  <!-- Testimonials -->
+  <!-- Team -->
   <section class="testimonials text-center bg-light">
     <div class="container">
-      <h2 class="mb-5">What people are saying...</h2>
+      <h2 class="mb-5">Our Team</h2>
       <div class="row">
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
             <h5>Margaret E.</h5>
-            <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
+            <p class="font-weight-light mb-0">Head of Operations</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
             <h5>Fred S.</h5>
-            <p class="font-weight-light mb-0">"Ideal Assignments Help is amazing. I've been using it to do my assignments."</p>
+            <p class="font-weight-light mb-0">Digital Marketer</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
             <h5>Sarah W.</h5>
-            <p class="font-weight-light mb-0">"Thanks so much for making these resources available to us!"</p>
+            <p class="font-weight-light mb-0">Operator</p>
           </div>
         </div>
       </div>
     </div>
+  </section>
+
+  <!-- Order Now Section -->
+
+  <section>
+
   </section>
 
   <!-- Call to Action -->
@@ -162,14 +180,16 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h2 class="mb-4">Ready to get started? Sign up now!</h2>
+          <h2 class="mb-4">Ready to get started with us? Sign up now!</h2>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <form>
+          <form action="/auth" method="GET">
             <div class="form-row">
               <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-              </div>
+                <input type="email" name="email" class="form-control form-control-lg" placeholder="Enter your email...">
+              
+              <input type="hidden" name="signupPanel" value="true"/>
+            </div>
               <div class="col-12 col-md-3">
                 <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
               </div>
@@ -179,6 +199,8 @@
       </div>
     </div>
   </section>
+
+
 
   <!-- Footer -->
   <footer class="footer bg-light">
@@ -202,7 +224,7 @@
               <a href="#">Privacy Policy</a>
             </li>
           </ul>
-          <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2021. All Rights Reserved.</p>
+          <p class="text-muted small mb-4 mb-lg-0">&copy; Ideal Assignments Help. All Rights Reserved.</p>
         </div>
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
