--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,49 +1,98 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/login.css" />
-    <title>Document</title>
+    <title>SignUp and Login</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
   </head>
+
   <body>
-    <div class="wrapper fadeInDown">
-      <div id="formContent">
-        <!-- Tabs Titles -->
-        <h2 class="active">Sign In</h2>
-        <h2 class="inactive underlineHover">
-          <a href="/signup"> Sign up</a>
-        </h2>
-
-        <!-- Icon -->
-        <!-- <div class="fadeIn first">
-            <img src="http://danielzawadzki.com/codepen/01/icon.svg" id="icon" alt="User Icon" />
+    <div
+      class="container <%if(typeof signupPanel != 'undefined' && signupPanel) { %> right-panel-active <% } %>"
+      id="container"
+    >
+      <div class="form-container sign-up-container">
+        <form action="/signup" method="POST">
+          <h1>Create Account</h1>
+          <!-- <div class="social-container">
+            <a href="#" class="social"><i class="fa fa-facebook"></i></a>
+            <a href="#" class="social"><i class="fa fa-google"></i></a>
+            <a href="#" class="social"><i class="fa fa-linkedin"></i></a>
           </div> -->
-
-        <!-- Login Form -->
-        <form action="/login" method="POST">
+          <!-- <span>or use your email for registration</span> -->
+          <%- include('./partials/messages.ejs') %>
           <input
             type="text"
-            id="email"
-            class="fadeIn second"
+            name="username"
+            placeholder="Username"
+            value="<%if(typeof username != 'undefined' && username) { %> <%=username %> <% } %>"
+          />
+          <input
+            type="email"
             name="email"
-            placeholder="email"
+            placeholder="Email"
+            value="<%if(typeof email != 'undefined' && email) { %> <%=email %> <% } %>"
           />
-          <input
-            type="text"
-            id="password"
-            class="fadeIn third"
-            name="login"
-            placeholder="password"
-          />
-          <input type="submit" class="fadeIn fourth" value="Log In" />
+          <input type="password" name="password" placeholder="Password" />
+          <button>SignUp</button>
         </form>
+      </div>
+      <div class="form-container sign-in-container">
+        <form action="/login" method="POST">
+          <h1>Sign In</h1>
+          <!-- <div class="social-container">
+            <a href="#" class="social"><i class="fa fa-facebook"></i></a>
+            <a href="#" class="social"><i class="fa fa-google"></i></a>
+            <a href="#" class="social"><i class="fa fa-linkedin"></i></a>
+          </div> -->
+          <!-- <span>or use your account</span> -->
+          <%- include('./partials/messages.ejs') %>
+          <input type="email" name="email" placeholder="Email" />
+          <input type="password" name="password" placeholder="Password" />
+          <a href="#">Forgot Your Password</a>
 
-        <!-- Remind Passowrd -->
-        <div id="formFooter">
-          <a class="underlineHover" href="#">Forgot Password?</a>
+          <button>Sign In</button>
+        </form>
+      </div>
+      <div class="overlay-container">
+        <div class="overlay">
+          <div class="overlay-panel overlay-left">
+            <h1>Welcome Back to Ideal Assigments Help</h1>
+            <p>
+              Ideal Assignments Help is your final search. Log in to get
+              started.
+            </p>
+            <button class="ghost" id="signIn">Sign In</button>
+          </div>
+          <div class="overlay-panel overlay-right">
+            <h1>Hello, Friend! Welcome to Ideal Assignments Help</h1>
+            <p>Enter your details and start journey with us</p>
+            <button class="ghost" id="signUp">Sign Up</button>
+          </div>
         </div>
       </div>
     </div>
+
+    <script type="text/javascript">
+      const signUpButton = document.getElementById("signUp");
+      const signInButton = document.getElementById("signIn");
+      const container = document.getElementById("container");
+      const errorP = document.getElementById("error");
+
+      const clearError = () => (errorP.innerHTML = "");
+
+      signUpButton.addEventListener("click", () => {
+        errorP && clearError();
+        container.classList.add("right-panel-active");
+      });
+      signInButton.addEventListener("click", () => {
+        errorP && clearError();
+        container.classList.remove("right-panel-active");
+      });
+    </script>
   </body>
 </html>
