--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,36 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="author" content="Abideen Muhammed">
-    <meta name="description" content="Need Assignment Help with Upto 30% Off? Get Top Quality Assignment Help from idealassignmentshelp.com at student-friendly prices and 24/7 support guaranteed." />
-    <meta name="keywords" content="Assignment Help, Students Assigments help, Online Assignment Help" />
-    <title>Ideal Assignments Help | High Excellence Assignments Help and Solutions</title>
-    <link rel="canonical" href="https://www.idealassignmentshelp.com/">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="author" content="Abideen Muhammed" />
+    <meta
+      name="description"
+      content="Need Assignment Help with Upto 30% Off? Get Top Quality Assignment Help from idealassignmentshelp.com at student-friendly prices and 24/7 support guaranteed."
+    />
+    <meta
+      name="keywords"
+      content="Assignment Help, Students Assigments help, Online Assignment Help"
+    />
+    <title>
+      Ideal Assignments Help | High Excellence Assignments Help and Solutions
+    </title>
+    <link rel="canonical" href="https://www.idealassignmentshelp.com/" />
+    <link
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,500,700"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
     <!-- Custom styles for this template -->
-    <link rel="shortcut icon" href="images/logo bar.jpeg" type="image/x-icon">
-    <link rel="stylesheet" href="./vendor/fontawesome-free/css/all.css">
-    <link rel="stylesheet" href="css/dashboard.css">
-  
-</head>
-<body>
-
-   <header>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
-          aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+    <link rel="shortcut icon" href="images/logo bar.jpeg" type="image/x-icon" />
+    <link rel="stylesheet" href="./vendor/fontawesome-free/css/all.css" />
+    <link rel="stylesheet" href="css/dashboard.css" />
+  </head>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarTogglerDemo01"
+          aria-controls="navbarTogglerDemo01"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
           <a class="navbar-brand" href="#">
-  
-            <img src="images/logo bar.jpeg" alt="Logo" style="width:100px;">
-  
+            <img src="images/logo bar.jpeg" alt="Logo" style="width: 100px" />
           </a>
           <a class="navbar-brand" href="#">Ideal Assigments Help</a>
           <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
@@ -41,130 +67,117 @@
               <a class="nav-link active" href="#">Purchase History</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="blog.idealassignmentshelp.com">Blog</a>
+              <a class="nav-link active" href="blog.idealassignmentshelp.com"
+                >Blog</a
+              >
             </li>
           </ul>
-    
+
           <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <input
+              class="form-control mr-sm-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
           </form>
         </div>
       </nav>
-  
-   </header>
+    </header>
 
+    <section>
+      <h1 class="dash">Welcome to your Dashboard</h1>
+    </section>
 
-    
-<section>
-    
-    <h1 class="dash">Welcome to your Dashboard</h1>
-   
-</section>
+    <hr />
+    <main class="sidebar">
+      <button type="button">
+        <a href="submit"> Submit New Assigments </a>
+      </button>
+      <br />
 
-    <hr>
-<main class="sidebar">
-
-    <button type="button"> <a href="submit"> Submit New Assigments  </a> </button>
-<br>
-   
-<!-- <a href="#">Profile</a> <br>
+      <!-- <a href="#">Profile</a> <br>
 <a href="#">Previous file</a> <br>
 <a href="#">Resources</a> <br> -->
+    </main>
 
-</main>
+    <!-- current order -->
 
-<!-- current order -->
+    <div class="tab_main tabs">
+      <div class="links-fixed">
+        <ul class="tab-links">
+          <li class="active">
+            <a href="#tools">Current Order</a>
+          </li>
+        </ul>
+      </div>
 
-<div class="tab_main tabs">
-  <div class="links-fixed">
-    <ul class="tab-links">
-      <li class="active">
-        <a href="#tools">Current Order</a>
-      </li>
-      
-
-    </ul>
-  </div>
-  
-  <section class="tab-content">
-    <div class="tab active" id="tools">
-      <div class="New_assignment" id="wrapper">
-        <div class="noordr">
-          <!-- <img src="/images/no-order.svg"> -->
-          <!-- Current Order not found
+      <section class="tab-content">
+        <div class="tab active" id="tools">
+          <div class="New_assignment" id="wrapper">
+            <div class="noordr">
+              <!-- <img src="/images/no-order.svg"> -->
+              <!-- Current Order not found
           <p>Looks like you haven’t added any assignment yet.</p> -->
-         <div>
-          <h4> Your current order details:</h4>
+              <div>
+                <h4>Your current order details:</h4>
 
-          Email: <br>
-          Country: <br>
-          <a href="http://" style="text-decoration: none;">Assignment File</a>
+                Email: <br />
+                Country: <br />
+                <a href="http://" style="text-decoration: none"
+                  >Assignment File</a
+                >
+              </div>
 
-         </div>
-        
-          <a href="/" class="odr-btn">Add New Order</a>
+              <a href="/" class="odr-btn">Add New Order</a>
+            </div>
+          </div>
+        </div>
+        <div id="guides" class="tab MyOders" style="display: none"></div>
+      </section>
+    </div>
+
+    <section>
+      <div class="tab_main tabs">
+        <div class="links-fixed">
+          <ul class="tab-links">
+            <li class="active">
+              <a href="#">Delivered Order</a>
+            </li>
+
+            <h3>Your previous orders</h3>
+            <ul>
+              <li>
+                <a href="#"> Document </a>
+                <h6>Date:</h6>
+              </li>
+            </ul>
+          </ul>
         </div>
       </div>
-    </div>
-    <div id="guides" class="tab MyOders " style="display: none;"></div>
-  </section>
-</div>
+    </section>
 
-<section>
-
-  <div class="tab_main tabs">
-    <div class="links-fixed">
-      <ul class="tab-links">
-        <li class="active">
-          <a href="#">Delivered Order</a>
-        </li>
-
-        <h3>Your previous orders</h3>
-  <ul>
-    <li>
-       <a href="#"> Document </a>  
-       <h6>Date: </h6>
-    </li>
-  </ul>
-
-      </ul>
-      </div>
-  </div>
-</section>
-
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<footer class="footer">
-        <h4> <span>You are login as Username </span></h4>
-        <button type="button"> <a href="/" style="text-decoration: none;"> Sign Out</a> </button>
+    <footer class="footer">
+      <h4><span>You are login as <%=username %> </span></h4>
+      <button type="button">
+        <a href="/logout" style="text-decoration: none"> Sign Out</a>
+      </button>
     </footer>
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-crossorigin="anonymous"></script>  
-</body> 
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
