--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -47,7 +47,7 @@
             </li>
             <li><a href="contact">Contact</a></li>
             <li class="nav-right-sty mt-lg-0 mt-sm-4 mt-3">
-              <a href="login" class="reqe-button text-uppercase">Login</a>
+              <a href="/signin" class="reqe-button text-uppercase">Login</a>
               <a href="register" class="reqe-button text-uppercase">Register</a>
             </li>
           </ul>
