--- a/views/login.ejs
+++ b/views/login.ejs
@@ -158,7 +158,7 @@
 
       <form action="/signin" method="post" class="p-sm-3">
         <div class="form-group">
-          <label for="recipient-name" class="col-form-label">Username</label>
+          <label for="recipient-name" class="col-form-label">Email</label>
           <input
             class="form-control"
             type="email"
