--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -158,7 +158,7 @@
     </section>
 
     <footer class="footer">
-      <h4><span>You are /signin as <%=username %> </span></h4>
+      <h4><span>You are login as <%=username %> </span></h4>
       <button type="button">
         <a href="/logout" style="text-decoration: none"> Sign Out</a>
       </button>
