--- a/views/index.ejs
+++ b/views/index.ejs
@@ -77,8 +77,8 @@
     </div>
   </div>
   <!-- Introduction content ends -->
-    <section class="w3l-/-block4">
-        <div class="feature-16-main py-5">
+    <section class="w3l-index-block4">
+        <div class="feature-16-main">
             <div class="container py-lg-3">
                 <div class="header-section text-center">
                     <h2> <span > Our Services </span></h2>
@@ -94,15 +94,14 @@
                                 </div>
                                 <div class="feature-16-gd-info main-stat">
                                     <h4 class="mt-4 mb-2 statis" style="font-weight: 300; background-color: orange;"> Statistical Analysis and Econometric </h4>
-                                    <!-- <p>For over a decade, Idealassignmentshelp has been actively involved in putting smiles on students' faces, who enjoy excellent grades from expertly written assignments. We cater to clients' academic needs within the USA, UK, Canada, and Australia, all year round, delivering quality written homework on a variety of subjects. Suppose you need help with essay writing, statistical analysis & econometrics, business plan, or general assignment help. In that case, you can count on us to execute your papers professionally and in record time.
-                                    </p> -->
+                                    
                                     <ul>
                                         <li>SPSS | STATA | MINITAB</li>
                                         <li>PYTHON | R | Machine Learning </li>
                                         <li>Thesis and Dissertation </li>
                                         <li>Term Paper</li>
                                     </ul>
-                                    <a href="stat" class="btn  theme-button ">Learn more</a>
+                                    <a href="stat.html" class="btn  theme-button ">Learn more</a>
                                 </div>
                             </div>
                         </div>
@@ -113,9 +112,8 @@
                                     <img src="images/General.jpg" class="img-fluid" alt="" />
                                 </div>
                                 <div class="feature-16-gd-info">
-                                    <h4 class="mt-4 mb-2 gen" style="font-weight: 300; background-color: aliceblue;"> <span> General Assignment Help </span></h4>
-                                    <!-- <p>For over a decade, Idealassignmentshelp has been actively involved in putting smiles on students' faces, who enjoy excellent grades from expertly written assignments. We cater to clients' academic needs within the USA, UK, Canada, and Australia, all year round, delivering quality written homework on a variety of subjects. Suppose you need help with essay writing, statistical analysis & econometrics, business plan, or general assignment help. In that case, you can count on us to execute your papers professionally and in record time.
-                                    </p> -->
+                                    <h4 class="mt-4 mb-2 gen" style="font-weight: 300; color: #fff;"> <span> General Assignment Help </span></h4>
+                                   
                                     <ul>
                                         <li> Data Analysis </li>
                                         <li>Matlab | Statistics Assignment Help </li>
@@ -125,20 +123,19 @@
                                         <li>Clinical Research Assignment Help</li>
                                         <li>Bioinformatics Assignment Help</li>
                                     </ul>
-                                    <a href="generalassignment" class="btn theme-button2 mt-4">Learn more</a>
+                                    <a href="generalassignment.html" class="btn theme-button2 mt-4">Learn more</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-6 mt-4 ">
                             <div class="feature-16-gd">
                                 <div>
-                                      <!-- Took off class="icon" from this div tag to fit in the images -->
+                           
                                     <img src="images/essay.jpg" class="img-fluid" alt="" />
                                 </div>
                                 <div class="feature-16-gd-info">
-                                    <h4 class="mt-4 mb-2 ess" > <span style="font-weight: 300;">Essay Writing</span></h4>
-                                    <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In itaque vel libero.
-                                    </p> -->
+                                    <h4 class="mt-4 mb-2 ess" > <span style="font-weight: 300; color: #fff; ">Essay Writing</span></h4>
+                                    
                                     <ul>
                                         <li>Custom Essay Writing </li>
                                         <li>Persuasive Essay Writing</li>
@@ -146,7 +143,7 @@
                                         <li>Essay Topics</li>
                                         <li>Essay Editing Services</li>
                                     </ul>
-                                    <a href="essay" class="btn theme-button3 mt-4">Learn more</a>
+                                    <a href="essay.html" class="btn theme-button3 mt-4">Learn more</a>
                                 </div>
                             </div>
                         </div>
@@ -158,8 +155,7 @@
                                 </div>
                                 <div class="feature-16-gd-info">
                                     <h4 class="mt-4 mb-2 bus"><span style="font-weight: 300;">Business Plan</span> </h4>
-                                    <!-- <p>For over a decade, Idealassignmentshelp has been actively involved in putting smiles on students' faces, who enjoy excellent grades from expertly written assignments. We cater to clients' academic needs within the USA, UK, Canada, and Australia, all year round, delivering quality written homework on a variety of subjects. Suppose you need help with essay writing, statistical analysis & econometrics, business plan, or general assignment help. In that case, you can count on us to execute your papers professionally and in record time.
-                                    </p> -->
+                                    
                                     <ul>
                                         <li>Startup | Loan Business Plan</li>
                                         <li>Business Proposal</li>
@@ -169,7 +165,7 @@
                                         <li>Investor Ready Business Plan</li>
                                         <li>Grant proposal writing </li>
                                     </ul>
-                                    <a href="business" class="btn theme-button4 mt-4">Learn more</a>
+                                    <a href="business.html" class="btn theme-button4 mt-4">Learn more</a>
                                 </div>
                             </div>
                         </div>
@@ -248,7 +244,7 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center">
-                <a href="about" class="btn w3ls-btn">view more</a>
+                <a href="about.html" class="btn w3ls-btn">view more</a>
             </div>
         </div>
     </section>
