--- a/public/css/general.css
+++ b/public/css/general.css
@@ -1,7 +1,15 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+
 p{
- 
-  font-family: robotoregular !important;
-  
+    
+    font-family: robotoregular !important;
+ font-size: 15px !important;
+    
 }
 
 h1, h2, h3, h4, h5, h6{
@@ -11,113 +19,118 @@ h1, h2, h3, h4, h5, h6{
 }
 
 .banner {
-    background: url(../images/gen\ banner.jpg);
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    -ms-background-size: cover;
-    background-size: cover;
-    position: relative;
-    z-index: -1;
+  background: url(../images/genbanner.jpg) center no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  -ms-background-size: cover;
+  background-size: cover;
+  position: relative;
+  z-index: -1;
 }
 
 .banner_text_wthree_pvt {
-    padding: 15vw 0;
+  padding: 10vw 0;
 }
 
 .banner:before,
 .inner-banner-w3ls:before {
-    position: absolute;
-    content: '';
-    background: rgba(0, 0, 0, 0.24);
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: -1;
+  position: absolute;
+  content: '';
+  background: rgba(0, 0, 0, 0.24);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 button.btn.bg-theme {
-    letter-spacing: 1px;
+  letter-spacing: 1px;
 }
 
 .bg-theme {
-    background: #00f2aa;
-    color: #fff;
+  background: #00f2aa;
+  color: #fff;
 }
 
 .bg-theme1 {
-    background: #ffffff;
-    color: #000;
+  background: #ffffff;
+  color: #000;
 }
 
 .bb-img h3 {
-    text-transform: capitalize;
-    font-size: 1.2em;
-    text-align: center;
-    margin: 1em 0 1.5em;
-    color: #000;
-    font-weight: 600;
-    font-family: 'Lato', sans-serif;
+  text-transform: capitalize;
+  font-size: 1.2em;
+  text-align: center;
+  margin: 1em 0 1.5em;
+  color: red;
+  font-weight: 600;
+  font-family: 'Lato', sans-serif;
 }
 
 
 .wthree-link-bnr {
-    padding: 8px 25px;
-    color: #fff;
-    font-weight: 600;
-    letter-spacing: 1px;
-    font-size: 14px;
-    background: #0083ff;
-    border: 1.5px solid #ffffff;
-    text-transform: uppercase;
+  padding: 8px 25px;
+  color: #fff;
+  font-weight: 600;
+  letter-spacing: 1px;
+  font-size: 14px;
+  background: #0083ff;
+  border: 1.5px solid #ffffff;
+  text-transform: uppercase;
 }
 
 .wthree-link-bnr:hover {
-    color: #fff;
-    opacity: .8;
+  color: #fff;
+  opacity: .8;
 }
 
 button.btn.wthree-link-bnr:hover {
-    background: #fff;
-    color: #000;
+  background: #fff;
+  color: #000;
 }
 
-p.bnr-txt {
-    width: 100%;
-    color: #fff;
-    font-size: 1.7em;
-    margin: 0.5em 0 1.2em;
-    line-height: 2;
+h4.bnr-txt {
+  width: 100%;
+  color: #fff;
+  font-size: 1.7em;
+  margin: 0.5em 0 1.2em;
+  line-height: 2;
 }
 
 button.wthree-link-bnr:hover {
-    background: #0083ff;
-    color: #fff;
+  background: #0083ff;
+  color: #fff;
 }
 
 h3.home-banner-w3 {
-    color: #fff;
-    font-size: 2.5em;
-    line-height: 1.4;
-    text-transform: capitalize;
-    width: 100%;
-    font-weight: 700;
-    /* word-spacing: 4px; */
+  color: #fff;
+  font-size: 2.5em;
+  line-height: 1.4;
+  text-transform: capitalize;
+  width: 100%;
+  font-weight: 700;
+  /* word-spacing: 4px; */
 }
 .object2{
     margin: 50px;
     text-align: center;
     color: #dd6e02 !important;
-    color: green;
+   
    
  }
  .object2 h2{
-     margin: 150px auto 20px auto;
-     font-size: 35px;
+     font-size: 24px !important;
      font-weight: 300;
-     background-color:aliceblue;
      text-transform: uppercase;
+     margin: auto;
+    text-align: center;
+    border: 2px solid orange;
+    background-color: #0083ff;
+    padding: 20px;
+    width: 400px;
+    color: #fff !important;
  }
 
 
@@ -142,13 +155,20 @@ h3.home-banner-w3 {
  }
  .object3 h2{
      margin: 20px auto;
-     font-size: 30px;
+     font-size: 15px !important;
+     font-family: robotomedium !important;
      text-align: center;
      font-weight: 300;
+     color: #dd6e02;
  
  }
+
+ .object3 h2:hover{
+   color: green;
+ }
  .object3 p{
-     font-size: 15px;
+     font-size: 15px !important;
+     font-family: robotoregular !important;
      text-align: center;
      margin: auto 30px;
  }
@@ -156,6 +176,23 @@ h3.home-banner-w3 {
      padding: 30px;
      margin-bottom: 40px;
  }
+
+ .customers_review{
+   text-align: center;
+   font-weight: 300;
+    margin: auto;
+    text-align: center;
+    border: 2px solid orange;
+    background-color: #0083ff;
+    padding: 20px;
+    width: 400px;
+    color: #fff !important;
+    font-size: 24px !important;
+  
+ }
+
+  
+
  .mdm{
      width: 300px;
  }
@@ -172,6 +209,16 @@ h3.home-banner-w3 {
   .object3 p{
     margin: auto ;
   }
+}
+@media all and (max-width: 425px){
+  .object2 h2{
+    padding: 10px;
+    width: 300px;
+  }
+
+.customers_review {
+  width: 300px;
+}
 }
 
 /* inner banner */
@@ -227,26 +274,40 @@ span.sub-title {
 h2{
     text-orientation:sideways-right;
     text-transform: uppercase;
+    
 }
 
-.other_help{
+.other_help h2{
+  font-size: 24px !important;
+  color: gold;
+}
+
+div.other_help{
     text-align: center;
 }
 
-.other_help ul li{
+/* .other_help ul li{
     list-style: lower-greek;
-}
+} */
 
 .others_list{
-    font-size: 30px;
-    text-align: start ;
+    font-size: 15px;
+    font-family: roboregular;
+}
+@media screen and (max-width: 425px){
+    .others_list li{
+      font-size: 15px;
+      margin: auto;
+      text-align: start;
+    }
 }
 
 .fa-check-circle{
-  font-size: 30px;
+  font-size: 12px;
   color: green;
-  margin: 20px 50px;
+  margin: 20px 30px;
 }
+
 
 .testimonials {
     text-align: center;
@@ -823,4 +884,12 @@ h2{
       font-size: 1rem;
     }
   }
+  
+
+
+
+
+
+
+
   
