--- a/views/index.ejs
+++ b/views/index.ejs
@@ -100,7 +100,7 @@
                                         <li>Thesis and Dissertation </li>
                                         <li>Term Paper</li>
                                     </ul>
-                                    <a href="stat.html" class="btn  theme-button ">Learn more</a>
+                                    <a href="/stat" class="btn  theme-button ">Learn more</a>
                                 </div>
                             </div>
                         </div>
@@ -142,7 +142,7 @@
                                         <li>Essay Topics</li>
                                         <li>Essay Editing Services</li>
                                     </ul>
-                                    <a href="essay.html" class="btn theme-button3 mt-4">Learn more</a>
+                                    <a href="/essay" class="btn theme-button3 mt-4">Learn more</a>
                                 </div>
                             </div>
                         </div>
@@ -164,7 +164,7 @@
                                         <li>Investor Ready Business Plan</li>
                                         <li>Grant proposal writing </li>
                                     </ul>
-                                    <a href="business.html" class="btn theme-button4 mt-4">Learn more</a>
+                                    <a href="/business" class="btn theme-button4 mt-4">Learn more</a>
                                 </div>
                             </div>
                         </div>
@@ -243,7 +243,7 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center">
-                <a href="about.html" class="btn w3ls-btn">view more</a>
+                <a href="/about" class="btn w3ls-btn">view more</a>
             </div>
         </div>
     </section>
