--- a/views/index.ejs
+++ b/views/index.ejs
@@ -122,7 +122,7 @@
                                         <li>Clinical Research Assignment Help</li>
                                         <li>Bioinformatics Assignment Help</li>
                                     </ul>
-                                    <a href="generalassignment.html" class="btn theme-button2 mt-4">Learn more</a>
+                                    <a href="/generalassignment" class="btn theme-button2 mt-4">Learn more</a>
                                 </div>
                             </div>
                         </div>
