--- a/views/generalassignment.ejs
+++ b/views/generalassignment.ejs
@@ -44,11 +44,13 @@
     <link href="//fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 </head>
 <body>
-
     <!-- header -->
-    
+  
     <%- include('./partials/navbar.ejs') %>
 
+
+<!-- submit now side panel -->
+    <!-- submit now button -->
     <span id="submit_now">
         
         <a href="index.html" style="text-decoration: none;">  Submit now </a>
