order now button resolved

--- a/views/business.ejs
+++ b/views/business.ejs
@@ -69,7 +69,7 @@
     <!-- submit now button -->
     <span id="submit_now">
         
-        <a href="index.html" style="text-decoration: none;">  Submit now </a>
+        <a href="/business" style="text-decoration: none;">  Submit now </a>
     
       </span>
 
@@ -111,7 +111,7 @@ We are passionate and excited to work with you in writing effective business pla
                                     <li>Products/Services</li>
                                     <li>Competitors Analysis / Industry Analysis</li>
                                 </ul>
-                                <a href="#" class="btn  theme-button ">Order Now</a>
+                                <a href="/business" class="btn  theme-button ">Order Now</a>
                             </div>
                         </div>
                     </div>
@@ -136,7 +136,7 @@ We are passionate and excited to work with you in writing effective business pla
                     <li>3-5 Years Financial Plan</li>
 
             </ul>
-            <a href="#" class="btn theme-button3 mt-4">Order Now</a>
+            <a href="/business" class="btn theme-button3 mt-4">Order Now</a>
         </div>
     </div>
 </div>
