--- a/views/essay.ejs
+++ b/views/essay.ejs
@@ -69,7 +69,7 @@
     <!-- submit now button -->
     <span id="submit_now">
         
-        <a href="index.html" style="text-decoration: none;">  Submit now </a>
+        <a href="/essay" style="text-decoration: none;">  Submit now </a>
     
       </span>
 
