--- a/views/generalassignment.ejs
+++ b/views/generalassignment.ejs
@@ -70,7 +70,7 @@
     <!-- submit now button -->
     <span id="submit_now">
         
-        <a href="index.html" style="text-decoration: none;">  Submit now </a>
+        <a href="/generalassignment" style="text-decoration: none;">  Submit now </a>
     
       </span>
 
