--- a/views/stat.ejs
+++ b/views/stat.ejs
@@ -71,7 +71,7 @@
     <!-- submit now button -->
     <span id="submit_now">
         
-        <a href="index.html" style="text-decoration: none;">  Submit now </a>
+        <a href="/stat" style="text-decoration: none;">  Submit now </a>
     
       </span>
 
