order now button resolved

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,6 +54,13 @@
     <!-- <h4 class="program"> <strong> Our Programs </strong></h4> -->
 </pre>
 
+
+<span id="submit_now">
+        
+    <a href="/stat" style="text-decoration: none;">  Submit now </a>
+
+  </span>
+
 <!-- Introduction contents -->
 <div class="container js--wp-1">
     <div class="row">
