order now button resolved

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,11 +55,7 @@
 </pre>
 
 
-<span id="submit_now">
-        
-    <a href="/stat" style="text-decoration: none;">  Submit now </a>
 
-  </span>
 
 <!-- Introduction contents -->
 <div class="container js--wp-1">
@@ -326,6 +322,14 @@
         </div>
     </div>
     <!-- //Resources -->
+
+    <!-- Order now -->
+    <span id="submit_now">
+        
+        <a href="/stat" style="text-decoration: none;">  Submit now </a>
+    
+      </span>
+      <!-- order now ends -->
 
      <!-- testimonials -->
     <div class="testimonials align-w3" id="testi">
