website not scrolling untill when clicked

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,17 +20,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./css/animate.css" >
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <script>
-        addEventListener("load", function () {
-            setTimeout(hideURLbar, 0);
-        }, false);
-
-        function hideURLbar() {
-            window.scrollTo(0, 1);
-
-        }
-
-    </script>
+   
     <!-- Custom Theme files -->
     <!-- <link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all"> -->
     <link href="css/style.css" type="text/css" rel="stylesheet" media="all">
@@ -251,15 +241,7 @@
         </div>
     </section>
 
-    
-    <!-- submit now side panel -->
-    <!-- submit now button -->
-    <span id="submit_now">
-    
-    
-      </span>
 
-      <!-- submit now ends -->
 
     <!-- Resources -->
     <div class="wthree_pvtits-services align-w3" id="Resources">
@@ -326,7 +308,7 @@
     <!-- Order now -->
     <span id="submit_now">
         
-        <a href="/stat" style="text-decoration: none;">  Submit now </a>
+        <a href="/" style="text-decoration: none;">  Submit now </a>
     
       </span>
       <!-- order now ends -->
@@ -635,18 +617,7 @@
     </div>
     <!-- //footer bottom -->
 </footer>
-<!-- //footer -->
-<!-- copyright -->
-<div class="cpy-right text-center">
-    <!-- <p class="text-bl">© 2021 Ideal Assignments Help. All rights reserved | Design by
-        <a href="http://w3layouts.com"> Abideen Muhammed </a>
-    </p> -->
-</div>
-<!-- //copyright -->
-<!-- move top icon -->
-<!-- <a href="#home" class="move-top text-center">
-    <span class="fa fa-level-up" aria-hidden="true"></span>
-</a> -->
+
 <!-- //move top icon -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
