--- a/views/business.ejs
+++ b/views/business.ejs
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" href="images/logo bar.jpeg" type="image/x-icon">
     <!-- Bootsrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <script>
+    <!-- <script>
         addEventListener("load", function () {
             setTimeout(hideURLbar, 0);
         }, false);
@@ -28,7 +28,7 @@
 
         }
 
-    </script>
+    </script> -->
     <!-- Custom Theme files -->
     <!-- <link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all"> -->
     <link href="css/style.css" type="text/css" rel="stylesheet" media="all">
