--- a/views/login.ejs
+++ b/views/login.ejs
@@ -42,7 +42,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
-    <script>
+    <!-- <script>
       addEventListener(
         "load",
         function () {
@@ -54,7 +54,7 @@
       function hideURLbar() {
         window.scrollTo(0, 1);
       }
-    </script>
+    </script> -->
 
     <!-- Custom Theme files -->
     <!-- <link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all"> -->
