--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
       <div id="logo">
         <h6>
           <a href="/" title="Ideal Assignments Help">
-            <img src="./images/logo bar.jpeg" alt="" style="width: 55px" />
+            <img src="/images/logo bar.jpeg" alt="" style="width: 55px" />
           </a>
         </h6>
       </div>
