--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -8,10 +8,10 @@
       <div class="house col-md-6 col-lg-6">
         <h3 class="home-banner-w3">Ideal Assignments Help</h3>
 
-        <p class="bnr-txt">
+        <h4 class="bnr-txt">
           Idealassignmentshelp: Your One Stop Solution And Online Assignment
           Help You Can Trust
-        </p>
+        </h4>
       </div>
       <%- include('./nav_submit_form.ejs') %>
     </div>
