--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" href="images/logo bar.jpeg" type="image/x-icon">
     <!-- Bootsrap Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="./css/animate.css" >
+    <link rel="stylesheet" href="/css/animate.css" >
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <script>
         addEventListener("load", function () {
@@ -33,9 +33,9 @@
     </script>
     <!-- Custom Theme files -->
     <!-- <link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all"> -->
-    <link href="css/style.css" type="text/css" rel="stylesheet" media="all">
+    <link href="/css/style.css" type="text/css" rel="stylesheet" media="all">
     <!-- font-awesome icons -->
-    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="/css/font-awesome.min.css" rel="stylesheet">
     <!-- //Custom Theme files -->
     <!-- online-fonts -->
     <link
