--- a/views/login.ejs
+++ b/views/login.ejs
@@ -182,7 +182,8 @@
         <div class="right-w3l">
           <input type="submit" class="form-control bg-theme" value="Login" />
         </div>
-        <!-- <div class="row sub-w3l my-3">
+        <!-- Remember me and forgot password -->
+        <div class="row sub-w3l my-3">
           <div class="col-sm-6 sub-w3layouts_hub">
             <input type="checkbox" id="brand1" value="" />
             <label for="brand1" class="text-secondary">
@@ -190,9 +191,9 @@
             >
           </div>
            <div class="col-sm-6 forgot-w3l text-sm-right">
-            <a href="#" class="text-secondary">Forgot Password?</a>
+            <a href="forgot_password.html" class="text-secondary">Forgot Password?</a>
           </div> 
-        </div> -->
+        </div>
         <p class="text-center dont-do text-secondary">
           Don't have an account?
           <a href="/register" class="text-theme-2 font-weight-bold">
