removed smooth scrolling

--- a/views/new_password.html
+++ b/views/new_password.html
@@ -18,17 +18,7 @@
         <link rel="shortcut icon" href="images/logo bar.jpeg" type="image/x-icon">
         <!-- Bootsrap Icons -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-        <script>
-            addEventListener("load", function () {
-                setTimeout(hideURLbar, 0);
-            }, false);
-    
-            function hideURLbar() {
-                window.scrollTo(0, 1);
-    
-            }
-    
-        </script>
+       
         <!-- Custom Theme files -->
         <!-- <link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all"> -->
         <link href="css/style.css" type="text/css" rel="stylesheet" media="all">
@@ -113,13 +103,7 @@
 
      <!-- Login Breadcrum Ends-->
 
-     <!-- forgot password notification -->
-     <div>
-            <!-- <h3>To reset your password, submit your username or your email address below. 
-                If we can find you in the database, an email will be sent to your email address, 
-                with instructions how to get access again.</h3> -->
-     </div>
-<hr>
+  
 
 <div id="page-content" class="row pb-3">
                 <div id="region-main-box" class="col-12">
@@ -128,7 +112,7 @@
                                 
                                 <span class="notifications" id="user-notifications"></span>
                                 <div role="main"><span id="maincontent"></span><div class="box generalbox boxwidthnormal boxaligncenter py-3">Please enter your new password below, then save changes.</div>
-<form autocomplete="off" action="https://campus.iou.edu.gm/campus/login/forgot_password.php" method="post" accept-charset="utf-8" id="mform1" class="mform">
+<form autocomplete="off" action="#" method="post" accept-charset="utf-8" id="mform1" class="mform">
     <div style="display: none;"><input name="token" type="hidden" value="dXNZwdBLSfzG0JrDIrTvzExmmjQYIHsT">
 <input name="sesskey" type="hidden" value="AfnfEUrCh9">
 <input name="_qf__login_set_password_form" type="hidden" value="1">
