--- a/views/login.ejs
+++ b/views/login.ejs
@@ -191,7 +191,7 @@
             >
           </div>
           <div class="col-sm-6 forgot-w3l text-sm-right">
-            <a href="forgot_password.html" class="text-secondary"
+            <a href="forgot_password" class="text-secondary"
               >Forgot Password?</a
             >
           </div>
