feat: multiple file upload

--- a/views/partials/nav_submit_form.ejs
+++ b/views/partials/nav_submit_form.ejs
@@ -78,6 +78,7 @@
             name="assignment_file"
             class="home-file"
             required
+            multiple
           />
           <input type="hidden" id="from" name="from" value="" />
 
