--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -202,6 +202,7 @@
           name="assignment_file"
           placeholder="Upload Question"
           required
+          multiple
         />
         <br />
         <input type="hidden" id="from" name="from" value="" />
