--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,7 +19,7 @@ h6 {
   font-family: robotomedium !important;
 }
 
-html,
+/* html,
 body {
   width: 100%;
   height: 100%;
@@ -37,7 +37,7 @@ body a,
   -ms-transition: 0.5s all;
   text-decoration: none;
   outline: none;
-}
+} */
 
 h1,
 h2,
@@ -78,7 +78,7 @@ body a:focus {
   background-color: transparent;
 }
 
-button,
+/* button,
 html [type="button"],
 [type="reset"],
 [type="submit"] {
@@ -87,7 +87,7 @@ html [type="button"],
 
 html {
   scroll-behavior: smooth;
-}
+} */
 
 /* colors code */
 .text-bl {
@@ -1401,6 +1401,14 @@ h3.w3f_title {
   color: #fff;
   font-weight: 400;
 }
+
+
+/* root visibility */
+/* :root{
+  visibility: hidden;
+} */
+
+
 
 /* //footer */
 /* -- Responsive code -- */
